--- a/Fabrika-Otomasyonu/Fabrika-Otomasyonu.csproj
+++ b/Fabrika-Otomasyonu/Fabrika-Otomasyonu.csproj
@@ -81,7 +81,11 @@
     <Reference Include="DevExpress.Printing.v24.1.Core, Version=24.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Sparkline.v24.1.Core, Version=24.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Utils.v24.1, Version=24.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraBars.v24.1, Version=24.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraEditors.v24.1, Version=24.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraGrid.v24.1, Version=24.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraLayout.v24.1, Version=24.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraPrinting.v24.1, Version=24.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -121,9 +125,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UrunYonetimi.cs" />
     <Compile Include="Veritabani.cs" />
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmYonetici.resx">
+      <DependentUpon>FrmYonetici.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -152,6 +160,42 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\RedEye.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ShoppingCart.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ShoppingCart1.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AreaChart.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DeveloperTools.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ShoppingCart2.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Shop.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CalculatorAddition.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ChromeRestore.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Cancel.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\View.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\View1.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RedEye1.svg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
