--- a/Fabrika-Otomasyonu/Fabrika-Otomasyonu.csproj
+++ b/Fabrika-Otomasyonu/Fabrika-Otomasyonu.csproj
@@ -123,6 +123,7 @@
     <Compile Include="FrmYonetici.Designer.cs">
       <DependentUpon>FrmYonetici.cs</DependentUpon>
     </Compile>
+    <Compile Include="HammaddeYonetimi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UrunYonetimi.cs" />
