--- a/Fabrika-Otomasyonu/Fabrika-Otomasyonu.csproj
+++ b/Fabrika-Otomasyonu/Fabrika-Otomasyonu.csproj
@@ -105,6 +105,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BildirimYonetimi.cs" />
     <Compile Include="FrmMusteri.cs">
       <SubType>Form</SubType>
     </Compile>
