--- a/Fabrika-Otomasyonu/Fabrika-Otomasyonu.csproj
+++ b/Fabrika-Otomasyonu/Fabrika-Otomasyonu.csproj
@@ -127,10 +127,16 @@
     <Compile Include="HammaddeYonetimi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SepetOgesi.cs" />
+    <Compile Include="SiparisYonetimi.cs" />
     <Compile Include="UrunYonetimi.cs" />
     <Compile Include="Veritabani.cs" />
+    <Compile Include="VitrinYonetimi.cs" />
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmMusteri.resx">
+      <DependentUpon>FrmMusteri.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmYonetici.resx">
       <DependentUpon>FrmYonetici.cs</DependentUpon>
